@@ -1,0 +1,22 @@
+<?php
+/***************************************************************************
+ *   Copyright (C) 2006 by Konstantin V. Arkhipov                          *
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ ***************************************************************************/
+/* $Id$ */
+
+	/**
+	 * @ingroup OSQL
+	**/
+	interface JoinCapableQuery
+	{
+		public function from($table, $alias = null);
+		public function join($table, LogicalObject $logic, $alias = null);
+		public function leftJoin($table, LogicalObject $logic, $alias = null);
+	}
+?>
