@@ -1,5 +1,10 @@
 # $Id$
 
+2006-12-03	Konstantin V. Arkhipov
+
+	* core/OSQL/: join's support extracted from SelectQuery, so now
+	UpdateQuery can handle joins too.
+
 2006-12-02	Konstantin V. Arkhipov
 
 	* core/Base/Date.class.php: extracted from Timestamp.
